# Divverse_AgenticAI

./: README.md
Week 2/Video 1/: .env-sample  Week 2 Video 1 (Langchain practical).ipynb  Week 2 Video 1 (OpenAI Practical).ipynb
Week 2/Video 2/: Week 2 Video 2.ipynb
Week 2/Video 3/: Week 2 Video 3.ipynb
Week 2/Video 4/: Week 2 Video 4.ipynb
Week 3/: Week 3 Video 2.ipynb
Week 4/: 2024 A Diary Entry (That Probably Should Have Stayed in My Head) - VITU na VITU.txt  Diary entries from Anhedonia - Keyukemi Ubi.txt  Week 4 Video 2a.ipynb  Week 4 Video 3.ipynb  Week 4 Video 4.ipynb
Week 5/: Week 5 Practical Video.ipynb
Week 6/: Week 6 Video 4.ipynb
Week 6 - Codes/: Week 6 Video 2.ipynb  Week 6 Video 3.ipynb
Week 7/Crews/fashion_trends_crew/: README.md  pyproject.toml
Week 7/Crews/fashion_trends_crew/src/fashion_trends_crew/: crew.py  main.py
Week 7/Crews/fashion_trends_crew/src/fashion_trends_crew/config/: agents.yaml  tasks.yaml
Week 7/Flows/flows/: README.md  pyproject.toml
Week 7/Flows/flows/src/flows/: crew.py  main.py
Week 7/Flows/flows/src/flows/config/: agents.yaml
Week 7/Hierarchical Process fix/ml_crew/: pyproject.toml
Week 7/Hierarchical Process fix/ml_crew/src/ml_crew/: crew.py  main.py
Week 7/Hierarchical Process fix/ml_crew/src/ml_crew/config/: agents.yaml  tasks.yaml
Week 7/Hierarchical Process fix/ml_crew/src/ml_crew/tools/: custom_tool.py  yf.ipynb
Week 7/Hierarchical Process/ml_crew/: README.md
Week 7/Hierarchical Process/ml_crew/src/ml_crew/: crew.py
Week 7/Hierarchical Process/ml_crew/src/ml_crew/config/: agents.yaml  (+1 more)
(+2 files in other folders)
