[project]
name = "flows"
version = "0.1.0"
description = "flows using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
flows = "flows.main:run"
run_crew = "flows.main:run"
train = "flows.main:train"
replay = "flows.main:replay"
test = "flows.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
