[project]
name = "ml_crew"
version = "0.1.0"
description = "ml-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
ml_crew = "ml_crew.main:run"
run_crew = "ml_crew.main:run"
train = "ml_crew.main:train"
replay = "ml_crew.main:replay"
test = "ml_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
